Finished content. Need cleanup.

--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -211,7 +211,7 @@ Theme is a very abstract term that is difficult to define. It can be thought of 
 
 Theme is beyond the scope of this project, both in interpretation of poetry and generation. However, we will attempt themes that can be summarised into a single word, often called topics. For example, we will try to emulate the styles of 'Love' poems or 'War' poems from the past. This will help give more meaning to the features described here and help in using them in the right context during the generation phase.
 
-\subsection{Types of Poetry}
+\subsection{Classification of Poetry}
 
 We define a type of poetry as a particular form of poem with a set of unique features, including those described in the previous section. Some types are very popular and have had their styles, features and purposes documented and taught. Out of these grew categories of different types that tend to be used for similar purposes.
 
