--- a/report/report.tex
+++ b/report/report.tex
@@ -110,7 +110,7 @@
 \backmatter % book mode only
 \appendix
 \renewcommand{\thesection}{A.\arabic{section}}
-\include{Appendix1/appendix1}
+%\include{Appendix1/appendix1}
 %\renewcommand{\thesection}{B.\arabic{section}}
 %\include{Appendix2/appendix2}
 
